refactor: organizando camada de servicos mudando nome das classes e organizando tratamento de exceções